<resources>
    <string name="app_name">Servicios Bienestar UQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_detalle_de_personaje">ejemplo de descripcion</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="descripcion">descripción</string>
    <string name="ubicacion">Ubicación</string>
    <string name="horario">Horario</string>
    <string name="agrFoto">Agregar foto</string>
    <string name="guardar">Guardar</string>
    <string name="reservar">Reservar</string>
    <string name="editar">Editar</string>
    <string name="cedula">Cédula</string>
    <string name="telefono">Teléfono</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="menuservicios">Administrar servicios</string>
    <string name="menuclientes">Administrar clientes</string>
    <string name="menusolicitudes">administrar solicitudes</string>
    <string name="menuencargados">Administar encargados</string>
    <string name="logout">Cerrar sesión</string>
    <string name="addAdmin">Agregar encargado</string>
    <string name="addService">Agregar servicio</string>
    <string name="addClient">Agregar cliente</string>
    <string name="nuevo">Nuevo...</string>
    <string name="mail">Email</string>
    <string name="dependencia">Dependencia</string>
    <string name="title_activity_login">Acceso</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="msnbienvenida">Esta es la App oficial en la que podrá administrar los recursos asociados a los servicios de Bienestar universitario. Para comenzar, deslice el dedo de izquierda a derecha para activar el menú.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Dirección de correo inválida</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">Acceso a contactos es necesario para autocompletar direcciones de correo." </string>
    <string name="missolicitudes">Mis solicitudes</string>
    <string name="serviciosdispon">Servicios disponibles</string>
    <string name="msnbienvenidacli">Esta es la App oficial en la que podrá solicitar servicios de Bienestar universitario de la Universidad del Quindío. Para comenzar, deslice el dedo de izquierda a derecha para activar el menú.</string>
    <string name="facebook_app_id">232153464219293</string>
    <string name="fb_login_protocol_scheme">fb232153464219293</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">Bfeu3ZGx6V6fxb4dmqKSKHWKX</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">SSEgUgxr1k4elr5K388f4MX66mBHlOqeWlQwdQuLhxAfsCvoq6</string>
    <string name="title_activity_editar_servicio">EditarServicio</string>
    <string name="Editar">Editar</string>
    <string name="borrar">Eliminar</string>
    <string name="registrarse">Registrarse</string>

</resources>
