<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/administar"
            android:title="@string/menuclientes" />
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/administar"
            android:title="@string/menuencargados" />
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/administar"
            android:title="@string/menuservicios" />
        <item
            android:id="@+id/menu_seccion_4"
            android:icon="@drawable/administar"
            android:title="@string/menusolicitudes" />

    </group>
    <item
        android:id="@+id/navigation_subheader"
        android:title="Más opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>