<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/servicio_editar_nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/servicio_editar_tipo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tipo"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <EditText
            android:id="@+id/servicio_editar_descripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/descripcion"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/servicio_editar_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ubicacion"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/servicio_editar_horario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/horario"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/editar_servicio_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agrFoto"/>
    <Button
        android:id="@+id/editar_servicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"/>

</LinearLayout>