<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/cliente_agregar_nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/cliente_agregar_cedula"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cedula"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/cliente_agregar_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mail"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/cliente_agregar_tipo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tipo"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/cliente_agregar_dependencia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/dependencia"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/cliente_agregar_telefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/telefono"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/agregar_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"/>

</LinearLayout>