<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/encargado_agregar_nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/encargado_agregar_cedula"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cedula"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/encargado_agregar_telefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/telefono"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/agregar_encargado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"/>

</LinearLayout>